<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background_gradient">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="308dp"
        android:layout_height="118dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/qamqor_logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/register_new_account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#CCCCCC" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:textColor="#000000"
        android:textColorHint="#CCCCCC" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:textColor="#000000"
        android:textColorHint="#CCCCCC" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registry"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_primary"
        android:textColor="#FFFFFF" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp" />
</LinearLayout>
