<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    android:layout_margin="30dp"
    android:padding="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textUserEmail"
            android:layout_below="@id/textUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_example_com"
            android:textSize="14sp"
            android:textColor="#666" />

        <ImageButton
            android:id="@+id/btnEditUser"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_edit"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/btnDeleteUser"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_delete" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
