<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_gradient"
    tools:context=".doctor.ProfileDoctorActivity"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginEnd="25dp"
                android:contentDescription="Back"
                android:src="@drawable/ic_back"
                app:tint="@android:color/white"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/my_profile"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/editIcon"
                android:layout_width="22dp"
                android:layout_height="24dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit"
                app:tint="@android:color/white" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:background="@drawable/circle_background"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_user_placeholder"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:textSize="20sp"
        android:textColor="@color/primary_dark"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/doctor_specialite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specialty"
        android:textSize="16sp"
        android:textColor="@color/primary_dark"
        app:layout_constraintTop_toBottomOf="@id/doctor_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/doctor_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/primary_dark"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/doctor_specialite"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/doctor_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/primary_dark"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/doctor_phone"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/doctor_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_address"
        android:textColor="@color/primary_dark"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/doctor_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/doctor_specialite5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/primary_dark"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/doctor_address"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/doctor_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="..."
        android:textColor="@color/primary_dark"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/doctor_specialite5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
